Source/WebCore/html/BaseDateAndTimeInputType.cpp
@@ -1,5 +1,6 @@
 /*
  * Copyright (C) 2010 Google Inc. All rights reserved.
+ * Copyright (C) 2016 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions are
@@ -90,6 +91,11 @@ Decimal BaseDateAndTimeInputType::defaultValueForStepUp() const
 bool BaseDateAndTimeInputType::isSteppable() const
 {
     return true;
+}
+
+void BaseDateAndTimeInputType::minOrMaxAttributeChanged()
+{
+    element().setNeedsStyleRecalc();
 }
 
 Decimal BaseDateAndTimeInputType::parseToNumber(const String& source, const Decimal& defaultValue) const
