Source/WebCore/html/NumberInputType.cpp
@@ -1,6 +1,6 @@
 /*
  * Copyright (C) 2010 Google Inc. All rights reserved.
- * Copyright (C) 2011 Apple Inc. All rights reserved.
+ * Copyright (C) 2011, 2016 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions are
@@ -299,9 +299,10 @@ bool NumberInputType::isNumberField() const
 void NumberInputType::minOrMaxAttributeChanged()
 {
     InputType::minOrMaxAttributeChanged();
-
-    if (element().renderer())
-        element().renderer()->setNeedsLayoutAndPrefWidthsRecalc();
+    HTMLInputElement& element = this->element();
+    element.setNeedsStyleRecalc();
+    if (RenderObject* renderer = element.renderer())
+        renderer->setNeedsLayoutAndPrefWidthsRecalc();
 }
 
 void NumberInputType::stepAttributeChanged()
